# task-dashboard

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.txt  EXTERNAL_SERVICES_GUIDE.md  LICENSE  README.md  TODO.md  compose.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.services.yml  docker-compose.test.yml  manage.py  pyproject.toml  temp.Dockerfile  update_po.py
.agent/rules/: daisyui-rule.md  django-rule.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml
.envs/.ci/: .django  .postgres
.github/instructions/: daisyui.instructions.md
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  debug.py  local.py  production.py  test.py
dashboard/: settings.py  urls.py
dashboard/static/css/: output.css
dashboard/templates/: index.html
docker/django/: Dockerfile  entrypoint.sh  start.sh
docker/postgres/: Dockerfile
docs/: admin-rbac.rst  conf.py  deployment.rst  howto.rst  index.rst  keycloak-setup.rst  make.bat  service-setup.rst  user-guide.rst  users.rst
locale/de/LC_MESSAGES/: django.po
locale/de_DE/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
scratch/: check_anchor.py  check_bag_of_words.py  check_overlap.py  check_split.py  check_split_space.py  debug_unassigned.py  investigate_owners.py  repro_field_error.py  test_anchor.py  test_bag_of_words.py  test_overlap.py  test_split.py  test_split_space.py  verification_script.py
task_dashboard/: conftest.py  context_processors.py
task_dashboard/services/: base.py  eramba.py  espocrm.py  gitlab.py  openproject.py  zammad.py
task_dashboard/static/css/: daisyui-theme.mjs  daisyui.mjs  input.css  project.css  tailwind.config.js
task_dashboard/templates/: base.html
task_dashboard/templates/account/: login.html  logout.html  password_reset.html
task_dashboard/templates/admin/: login.html
task_dashboard/templates/pages/: home.html
task_dashboard/templates/users/: dashboard.html
task_dashboard/users/: adapters.py  admin.py  admin_site.py  apps.py  fields.py  forms.py  identity.py  models.py  rbac.py  tasks.py  urls.py  utils.py  views.py
task_dashboard/users/migrations/: 0001_initial.py  0002_serviceconfiguration.py  0003_alter_serviceconfiguration_options_externalgroup_and_more.py  0004_taskpermission_access_level.py  0005_serviceconfiguration_api_token_and_more.py  0006_alter_serviceconfiguration_api_token.py  0007_alter_serviceconfiguration_api_token.py  0008_alter_taskpermission_access_level.py  0009_savedview.py  0010_alter_savedview_unique_together.py  0012_task_legacy.py  0013_task_model_cleanup.py  0014_serviceconfiguration_api_password_and_more.py  0015_alter_task_customer.py  0016_externalgroup_extra_data.py  0017_serviceconfiguration_default_access_level_and_more.py  0018_update_own_only_to_own.py  0019_rename_models_to_task.py  0020_servicepermission.py  0021_alter_servicepermission_access_level_and_more.py  0022_alter_serviceconfiguration_options.py  0023_alter_serviceconfiguration_options.py  0024_globalsetting.py  0025_globalsetting_default_task_states.py  0026_ssogroup.py  0027_task_search_text_task_users_task_search__1d4dc9_idx.py  0028_task_service_group.py  0029_migrate_task_groups.py  0030_enable_unaccent.py  0031_add_owner_gin_indexes.py  0032_align_owner_gin_indexes.py  0033_task_original_priority_task_original_status.py  0034_clean_sso_groups.py  0035_search_text_trigram_index.py  0036_task_field_indexes.py  0037_clean_sso_groups.py  (+2 more)
ticket_dashboard/: conftest.py  context_processors.py  middleware.py
ticket_dashboard/services/: eramba.py  espocrm.py  gitlab.py  openproject.py  zammad.py
ticket_dashboard/templates/: base.html
ticket_dashboard/users/: adapters.py  admin.py  apps.py  fields.py  models.py  tasks.py  urls.py  views.py
(+87 files in other folders)
