# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]
filterwarnings = [
    "ignore:The default scheme will be changed from 'http' to 'https' in Django 6.0:django.utils.deprecation.RemovedInDjango60Warning",
    "ignore:No directory at.*staticfiles:UserWarning",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["task_dashboard/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "docs/*",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "COM812", # Missing trailing comma (conflicts with formatter)
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
]

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "django-coverage-plugin==3.2.2",
    "django-debug-toolbar==6.3.0",
    "django-extensions==4.1",
    "django-stubs[compatible-mypy]==6.0.3",
    "djlint==1.36.4",
    "factory-boy==3.3.3",
    "ipdb==0.13.13",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "bandit==1.9.4",
    "pip-audit==2.8.0",
    "psycopg[c]==3.2.13",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-sugar==1.1.1",
    "ruff==0.15.12",
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    "pydata-sphinx-theme==0.17.1",
    "werkzeug[watchdog]==3.1.8",
]

[project]
name = "task_dashboard"
version = "0.1.43"
description = "Awesome Task Dashboard"
readme = "README.md"

license = { text = "MIT" }
authors = [
  { name = "Justus Jäger", email = "jaeger@ngenn.net" },
]
requires-python = "==3.13.*"
dependencies = [
    "django-extensions==4.1",
    "argon2-cffi==25.1.0",
    "crispy-bootstrap5==2026.3",
    "django==5.2.14",
    "django-allauth[mfa,openid,socialaccount]==65.16.1",
    "django-anymail==15.0",
    "django-crispy-forms==2.6",
    "django-environ==0.13.0",
    "django-redis==6.0.0",
    "gunicorn==25.3.0",
    "hiredis==3.3.1",
    "httpx>=0.28.1",
    "psycopg[c]==3.2.13",
    "sentry-sdk==2.58.0",
    "urllib3>=2.7.0",
    "whitenoise==6.12.0",
    "django-q2==1.10.0",
    "django-debug-toolbar>=6.3.0",
    "django-htmx>=1.27.0",
    "django-unfold==0.92.0",
]
